# AI-Cognitive-Version-Control

./: .gitignore  CHANGELOG.md  CLI_TEST.md  COMPLETE_CONFIRMATION.md  MCP_WORKSPACE_RESEARCH.md  MULTI_WORKSPACE.md  README.md  README.old.md  docs.md  pyproject.toml  test_speed.py
.cvc/: cvc.db
cvc/: __init__.py  __main__.py  cli.py  launcher.py  mcp_server.py  proxy.py
cvc/adapters/: __init__.py  anthropic.py  base.py  google.py  lmstudio.py  ollama.py  openai.py
cvc/agent/: __init__.py  auto_context.py  chat.py  context_autopilot.py  cost_tracker.py  executor.py  git_integration.py  llm.py  memory.py  renderer.py  system_prompt.py  tools.py  web_search.py
cvc/core/: database.py  models.py
cvc/operations/: engine.py  state_machine.py
cvc/vcs/: bridge.py
docs/: CHANGELOG.md  CLI_AGENT_GUIDE.md  CLI_SLASH_COMMANDS.md  CROSS_MODE_GUIDE.md  CVC_TOOLS_REFERENCE.md  MCP_DOCUMENTATION.md  TELEGRAM_INTEGRATION.md  VERIFICATION.md  VISION_COGNITIVE_FEATURES.md  documentation.md
scripts/: install.cmd  install.ps1  install.sh
tests/: test_autopilot.py  test_budget.py  test_features.py  test_gemini3.py  test_gemini3_v2.py  test_gemini_speed.py  test_list_models.py  test_streaming.py
