[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tm-ai"
version = "0.2.2"
description = "Time Machine for AI Agents — Cognitive Version Control for LLM context"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "CVC Contributors" }]
keywords = ["ai", "agents", "context", "version-control", "merkle", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "zstandard>=0.23.0",
    "aiosqlite>=0.20.0",
    "GitPython>=3.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.5.0", "sentence-transformers>=3.0.0"]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.50.0"]
google = ["google-genai>=1.0.0"]
ollama = []  # No extra deps — Ollama uses httpx (already a core dep)
all = ["tm-ai[vector,anthropic,openai,google]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]

[project.scripts]
cvc = "cvc.cli:main"

[project.urls]
Homepage = "https://github.com/mannuking/AI-Cognitive-Version-Control"
Repository = "https://github.com/mannuking/AI-Cognitive-Version-Control"
Issues = "https://github.com/mannuking/AI-Cognitive-Version-Control/issues"

[tool.hatch.build.targets.wheel]
packages = ["cvc"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
